--- a/css/index.css
+++ b/css/index.css
@@ -89,19 +89,19 @@ h2, h3, p, ul, a {
 
 /* Лого */
 
-.header__logo span,
+.header__span,
 .footer__logo span {
     color: var(--accent-color);
 }
 
 .header__logo:focus,
-.footer-logo:focus {
+.footer__logo:focus {
     color: var(--accent-color);
     outline: var(--accent-color);
 }
 
 .header__logo,
-.footer-logo {
+.footer__logo {
     display: inline-block;
     margin-right: 94px;
 
@@ -148,12 +148,12 @@ h2, h3, p, ul, a {
 
 .header__link:hover,
 .header__link:focus,
-.footer-link.contakt:hover, 
-.footer-link.contakt:focus,
-.footer-link:hover, 
-.footer-link:focus,
-.adress-link:hover, 
-.adress-link:focus {
+.footer__link--adresscolor:hover, 
+.footer__link--adresscolor:focus,
+.footer__link:hover, 
+.footer__link:focus,
+.adress__link:hover, 
+.adress__link:focus {
     color: var(--accent-color);
     outline: var(--accent-color);
 
@@ -167,33 +167,33 @@ h2, h3, p, ul, a {
     margin-left: auto;
 }
 
-.icon-adress {
+.adress__icon {
     margin-right: 10px;
     vertical-align: middle;
     fill: currentColor;
 }
 
-.icon-post {
+.adress__icon-post {
     height: 12px;
     width: 16px;
 }
 
-.icon-phone {
+.adress__icon-phone {
     width: 10px;
     height: 16px;
 }
 
-.adress-item:not(:first-child) {
+.adress__item:not(:first-child) {
     margin-left: 50px;
 }
 
-.adress-link {
+.adress__link {
     color: var(--primary-text-color);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-list .link.current {
+.header__list .link.current {
     color: var(--accent-color);
 }
 
@@ -218,7 +218,7 @@ h2, h3, p, ul, a {
     padding-bottom: 200px;
 }
 
-.hero-overlay {
+.hero__overlay {
     height: 600px;
     max-width: 1600px;
     margin: 0 auto;
@@ -230,7 +230,7 @@ h2, h3, p, ul, a {
     background-color: #C4C4C4;
 }
 
-.hero-title {
+.hero__title {
     margin: 0 auto;
     margin-bottom: 30px;
     max-width: 696px;
@@ -244,7 +244,7 @@ h2, h3, p, ul, a {
     color: var(--color-white);
 }
 
-.hero-btn {
+.hero__btn {
     display: inline-block;
     padding: 10px 32px;
     border-radius: 4px;
@@ -265,12 +265,12 @@ h2, h3, p, ul, a {
 
 }
 
-.hero-btn:hover, 
-.hero-btn:focus, 
-.form-btn:hover, 
-.form-btn:focus,
-.mail-btn:hover, 
-.mail-btn:focus {
+.hero__btn:hover, 
+.hero__btn:focus, 
+.form__btn:hover, 
+.form__btn:focus,
+.mail__btn:hover, 
+.mail__btn:focus {
     background-color: #188CE8;
     cursor: pointer;
     outline: var(--accent-color);
@@ -281,7 +281,7 @@ h2, h3, p, ul, a {
 
 }
 
-.section-title {
+.section__title {
     margin: 0;
     margin-bottom: 50px;
 
@@ -298,16 +298,16 @@ h2, h3, p, ul, a {
     padding-top: 0;
 }
 
-.made-list {
+.made__list {
     display: flex;
     gap: 30px;
 }
 
-.made-item {
+.made__item {
     position: relative;
 }
 
-.thumb-made {
+.thumb__made {
     position: absolute;
 
     display: flex;
@@ -322,7 +322,7 @@ h2, h3, p, ul, a {
     background-color: rgba(47, 48, 58, 0.8);
 }
 
-.thumb-title {
+.thumb__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -332,12 +332,14 @@ h2, h3, p, ul, a {
     color: var(--color-white);
 }
 
+/* Что нам важно */
+
 .significant {
     display: flex;
     gap: 30px;
 }
 
-.thumb.icon-significant {
+.significant__thumb {
     display: flex;
     background-color: var(--portfolio-btn-color);
     justify-content: center;
@@ -346,11 +348,11 @@ h2, h3, p, ul, a {
 }
 
 
-.significant-list {
+.significant__list {
     flex-basis: calc(100% - 90px / 4);
 }
 
-.significant-title {
+.significant__title {
     margin: 0;
     margin-bottom: 10px;
 
@@ -363,7 +365,7 @@ h2, h3, p, ul, a {
     color: var(--secondary-title-text);
 }
 
-.significant .sign-subtxt {
+.significant__subtxt {
     margin: 0;
 
     font-size: 14px;
@@ -371,16 +373,18 @@ h2, h3, p, ul, a {
     letter-spacing: 0.03em;
 }
 
-.team.section {
+/* Наша команда */
+
+.team__section {
     background: #F5F4FA;
 }
 
-.team-list {
+.team__list {
     display: flex;
     gap: 30px;
 }
 
-.team-item {
+.team__item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
@@ -388,12 +392,12 @@ h2, h3, p, ul, a {
 
 }
 
-.team-img {
+.team__img {
     display: block;
     margin-bottom: 30px;
 } 
 
-.team-title {
+.team__title {
     margin-top: 0;
     margin-bottom: 10px;
 
@@ -406,7 +410,7 @@ h2, h3, p, ul, a {
     color: var(--secondary-title-text);
 }
 
-.team-subtxt {
+.team__subtxt {
     margin-top: 0;
     margin-bottom: 16px;
 
@@ -417,13 +421,13 @@ h2, h3, p, ul, a {
     color: var(--primary-text-color);
 }
 
-.team-social {
+.team-social__list {
     display: flex;
     padding: 0 32px 30px;
     justify-content: space-between;
 }
 
-.social-link {
+.social__link {
     display: flex;
     justify-content: center;
     align-items:center;
@@ -439,8 +443,8 @@ h2, h3, p, ul, a {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover, 
-.social-link:focus {
+.social__link:hover, 
+.social__link:focus {
     color: var(--color-white);
     background-color: var(--accent-color);
     outline: var(--accent-color);
@@ -452,14 +456,14 @@ h2, h3, p, ul, a {
 
 /* Фирмы */
 
-.firms-list {
+.firms__list {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
 }
 
-.firms-item {
+.firms__item {
     border: 1px solid var(--social-link-color);
     border-radius: 4px;
   
@@ -469,12 +473,12 @@ h2, h3, p, ul, a {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.firms-item:hover .firms-link,
-.firms-item:focus .firms-link,
-.firms-item:focus,
-.firms-item:hover,
-.firms-link:focus, 
-.firms-link:hover {
+.firms__item:hover .firms__link,
+.firms__item:focus .firms__link,
+.firms__item:focus,
+.firms__item:hover,
+.firms__link:focus, 
+.firms__link:hover {
     border-color: var(--accent-color);
     cursor: pointer;
     color: var(--accent-color);
@@ -482,7 +486,7 @@ h2, h3, p, ul, a {
 
 }
 
-.firms-link {
+.firms__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -494,6 +498,8 @@ h2, h3, p, ul, a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Footer */
+
 .footer {
     padding-bottom: 60px;
     padding-top: 60px;
@@ -501,25 +507,25 @@ h2, h3, p, ul, a {
     background: #2F303A;
 }
 
-.footer-logo {
+.footer__logo {
     margin: 0;
     margin-bottom: 20px;
 
     color: var(--color-white);
 }
 
-.footer-link {
+.footer__link {
     color: var(--color-white);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.footer-link .contakt {
+.footer__link--adresscolor {
     color: var(--adress-color);
 }
 
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
     margin-bottom: 9px;
 }
 
@@ -648,19 +654,19 @@ h2, h3, p, ul, a {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-list {
+.footer__list {
     font-style: normal;
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.03em;
 }
 
-.footer-social {
+.footer__social {
     display: inline-flex;
     gap: 10px;
 }
 
-.footer-wrapper {
+.footer__wrapper {
     display: flex;
     align-items: baseline;
 }
